# chrisgrounds.github.io

./: .gitignore  2025-04-26-two-types-of-tdd.md  404.html  CNAME  Gemfile  README.md  _config.yml  about.markdown  chrisgrounds-github-io.cabal  flake.nix  index.html  index.md  investing.html  site.hs
.github/workflows/: hakyll.yml
_includes/: contact.html  css.html  main.css  nav.html
_layouts/: default.html
_posts/: 2018-09-27-data-constructors-functions.md  2018-09-27-data_constructors_functions.md  2018-09-27-programming-beauty.md  2018-09-27-tdd-tdd-ttdd.md  2018-09-27-types-and-minds.md  2018-09-27-types_and_minds.md  2018-11-25-client_ssl_auth_in_10_minutes.md  2019-03-04-readerT.md  2019-09-27-programming_beauty.md  2023-03-17-generate-random-data-rust.md  2024-10-01-domain-modelling-with-category-theory.md  2025-04-14-monads.md  2025-04-14-the-structure-and-content-of-computer-programs.md  2025-04-23-the-structure-and-content-of-computer-programs.md  2025-04-24-steelman-anti-tdd.md  2025-04-26-two-types-of-tdd.md  2025-05-28-entropy.md  2025-05-31-coding-without-implementation.md  2025-05-31-llm-types.md  2026-07-18-illegal-tests.md  2026-07-18-impossible-tests.md  client_ssl_auth_in_10_minutes.mdclient_ssl_auth_in_10_minutes.md
assets/css/: main.css  main.scss  styles.scss
css/: main.css
my-awesome-site/: Gemfile  _config.yml
my-awesome-site/_posts/: 2018-09-27-data_constructors_functions.md  2018-09-27-programming_beauty.md  2018-09-27-react_from_the_start.md  compose-for-speed.md  (+12 more)
templates/: archive.html  default.html  page.html  post.html
(+1 files in other folders)
